Test_files/invalidTestCases/Underflow_push32.avm
push int32(-10000000000000000000)
exit